Setup accessibility service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		  package="com.bonnetrouge.quasar">
 
+	<!--Special Permission-->
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
+	<!--Accessibility Permission-->
+	<uses-permission android:name="android.permission.BIND_ACCESSIBILITY_SERVICE" />
 
 	<application
 		android:allowBackup="true"
@@ -11,6 +15,16 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
+
+		<service android:name=".Services.OverlayAccessibilityService"
+				 android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+			<intent-filter>
+				<action android:name="android.accessibilityservice.AccessibilityService"/>
+			</intent-filter>
+			<meta-data
+				android:name="android.accessibilityservice"
+				android:resource="@xml/accessibility_service_config" />
+		</service>
 		<activity android:name=".MainActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
