Add overlay service with a faded ImageView

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 
+		<service android:name=".Services.OverlayService"/>
+
 		<service android:name=".Services.OverlayAccessibilityService"
 				 android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
 			<intent-filter>
