--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    implementation 'com.android.support:cardview-v7:26.1.0'
+
     testCompile 'junit:junit:4.12'
-    implementation 'com.android.support:design:27.0.1'
+    implementation 'com.android.support:design:26.1.0'
 }
