Keep orientation always portrait

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
 				android:name="android.accessibilityservice"
 				android:resource="@xml/accessibility_service_config" />
 		</service>
-		<activity android:name=".MainActivity">
+		<activity android:name=".MainActivity"
+				  android:configChanges="orientation"
+				  android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"/>
 
